# Buddhabrot

./: .gitignore  CMakeLists.txt  README  README.md  build.sh
src/: Color.cpp  Color.hpp  Point.cpp  Point.hpp  Utils.cpp  Utils.hpp  main.cpp
